--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "firebase": "^11.8.1",
     "framer-motion": "^11.0.20",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -20,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.30.0",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
